--- a/S01.01-Exercise-CreateLayout/app/build.gradle
+++ b/S01.01-Exercise-CreateLayout/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.example.android.sunshine"
@@ -21,10 +21,9 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:25.1.0'
+    api 'com.android.support:appcompat-v7:25.0.+'
 
-    // TODO (10) Remove this dependency as we won't be needing it for the project until later
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    // COMPLETE (10) Remove this dependency as we won't be needing it for the project until later
 
     // Instrumentation dependencies use androidTestCompile
     // (as opposed to testCompile for local unit tests run in the JVM)
